some corrections with @shaked6